<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"

    >

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="@drawable/shape"
            android:textSize="20sp"
            android:id="@+id/bj"
            android:text="@string/bj"
         />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sh"
            android:background="@drawable/shape"

            android:text="@string/sh"
            android:textSize="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/heb"
            android:background="@drawable/shape"

            android:text="@string/heb"
            android:textSize="20dp"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gz"
            android:background="@drawable/shape"

            android:text="@string/gz"
            android:textSize="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cc"
            android:text="@string/cc"
            android:background="@drawable/shape"

            android:textSize="20dp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/sy"
            android:background="@drawable/shape"

            android:text="@string/sy"
            android:textSize="20dp"/>

    </LinearLayout>

    <WebView
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:id="@+id/webView1"
        android:background="@drawable/bg111"
        android:focusable="false"
        android:layout_weight="1"/>

</LinearLayout>

